--- a/simple.html
+++ b/simple.html
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here Adding some meaningless changes -->
 		<p>
-			Just some content. Adding some meaningless changes in master branch
+			Just nothing but trouble.
 		</p>
 	</main>
 	<footer class="container">
