mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Adding changes before rebasing conflicts
+	Some other changes in master branch
 -->
 <head>
-	<title></title>
+	<title>Title Change in master branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,9 +16,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Content Goes Here Adding some meaningless changes -->
 		<p>
-			Just some content
+			Just some content. Adding some meaningless changes in master branch
 		</p>
 	</main>
 	<footer class="container">
