Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Some other changes in master branch
 -->
 <head>
-	<title>Title Change in master branch</title>
+	<title>Title Change in master branch. Add some in bt branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
