--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here Adding some meaningless changes -->
 		<p>
-			Just nothing but trouble.
+			Just nothing but trouble. Some changes in master before after rebased
 		</p>
 	</main>
 	<footer class="container">
