--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git Training, All rights reserved.</p>
 	</footer>
 </body>
 </html>
