--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2014 Git.Training
 -->
 <head>
-	<title>Title Change in master branch. Add some in bt branch</title>
+	<title>Update Title for Stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
